# alexjeremytest1

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.cursor/: README.md  javascript-rules.json  python-rules.json  settings.json
.cursor/rules/: auto_commit.md  cursor-rules-location.mdc  js-formatter.mdc  js-linter.mdc  minimum-changes.mdc  python-docstrings.mdc  python-formatter.mdc  python-imports.mdc  python-linter.mdc  rust-api-design.mdc  rust-concurrency.mdc  rust-error-handling.mdc  rust-ownership.mdc  rust-performance.mdc  rust-testing.mdc  rust-tooling.mdc  scope_discipline.md  svelte-structure.mdc
.github/workflows/: backend-tests.yml  rust.yml
backend/: board_logic.py  config.py  db_config.py  main.py  matchmaking.py  models.py  pytest.ini  requirements.txt  schemas.py  services.py  test_endpoints.py  tictactoe.db
backend/tests/: conftest.py  http_client.py  test_game_logic.py  test_matchmaking.py  test_regression.py
frontend/: .eslintrc.json  index.html  package.json  vite.config.js
frontend/src/: App.svelte  Game.svelte  GameEndModal.svelte  Home.svelte  Layout.svelte  Login.svelte  MatchmakingModal.svelte  PlayerNameModal.svelte  Profile.svelte  SampleBoard.svelte  Signup.svelte  StartGameModal.svelte  config.js  constants.js  main.js  router.js  stores.js  utils.js
rustbackend/: Cargo.toml  README.md
rustbackend/src/: lib.rs  main.rs
rustbackend/tests/: integration.rs
specs/backend/: 00-index.md  01-overview.md  02-data-models.md  03-api-endpoints.md  04-game-logic.md  05-matchmaking.md  06-authentication.md  07-validation.md  (+3 more)
